# socket-wrapper

./: CMakeLists.txt  README.md  build.sh
include/socketwrapper/: Socket.h  SocketException.h
src/: Socket.cpp
